moved projects container up a little bit, added a 75% width to project titles, and put a z-index on the project cards to hopefully fix overlay issue on mobile

--- a/looks/main.css
+++ b/looks/main.css
@@ -138,7 +138,7 @@ h2 {
     display: flex;
     width: 100%;
     height: 70vh;
-    margin-top: 125px;
+    margin-top: 112px;
     overflow: scroll;
     scrollbar-width: none;
     z-index: 10;
@@ -178,6 +178,7 @@ h2 {
     transition-duration: 1s;
     margin: 16px 12px 34px 12px;
     /* padding-top: 25px; */
+    z-index: 10;
 }
 
 .project-card:hover {
@@ -220,6 +221,7 @@ h2 {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    width: 75%;
     bottom: 102px;
     left: 50%;
     transform: translateX(-50%);
